# play

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MIGRATION_SUMMARY.md  Makefile  README.md  XIAOZHI_INTEGRATION_COMPLETE.md  build.rs  build.sh  buildCache.sh  build_dev.sh  build_prod.sh  cache.Dockerfile  dep.txt  musl_aarch.Dockerfile  musl_x86.Dockerfile  test-mcp-logging.sh  test.sh  test_mcp.sh  test_mcp_simple.sh  test_mcp_sse.py  test_mcp_with_tools.sh  test_xiaozhi_integration.sh  test_xiaozhi_server_integration.sh
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/src/: lib.rs  music_player.rs
crates/play-abi/: Cargo.toml  golang_abi.go
crates/play-abi/src/: http_abi.rs  lib.rs  server_abi.rs
crates/play-db/: Cargo.toml  README.md  sqlite_asset_chunks_schema.sql  sqlite_crud_demo.sql  sqlite_kv_docs_assets_schema.sql
crates/play-db/src/: asset_service.rs  assets.rs  docs.rs  docs_view.rs  kv.rs  lib.rs
crates/play-dylib-example/: Cargo.toml
crates/play-dylib-example/src/: lib.rs
crates/play-dylib-loader/: Cargo.toml
crates/play-dylib-loader/src/: lib.rs  main.rs
crates/play-dylib/play-dylib-abi/: Cargo.toml  README.md  README_NEW_ARCHITECTURE.md  golang_abi.go
crates/play-dylib/play-dylib-loader/: Cargo.toml
crates/play-gui/: Cargo.toml  README.md  build.rs
crates/play-gui/curl-helper/: Cargo.toml  README.md
crates/play-gui/frp-client/: Cargo.toml  README.md
crates/play-gui/scripts/: build_dmg.sh
crates/play-gui/src/: main.rs  settings.rs  startup.rs
crates/play-https/: Cargo.toml
crates/play-https/src/: lib.rs
crates/play-integration-xiaozhi/: Cargo.toml  README.md
crates/play-integration-xiaozhi/src/: client.rs  config.rs  tests.rs
crates/play-job/: Cargo.toml
crates/play-job/src/: lib.rs
crates/play-mcp/: Cargo.toml  README.md  build.rs  config.json  test_mcp.sh  test_websocket.py
crates/play-mcp/docs/: DEFINE_MCP_TOOL_USAGE.md  input_schema_guide.md  multi_operation_tools.md
crates/play-mcp/examples/: bilibili_download_example.rs  config.json  config_all_tools.json  custom_tool.rs  list_tools_ordered.rs  mcp_with_prefix.rs  multiple_auto_gen_tools.rs  prefixed_tools.rs  selective_tools.rs  simple_usage.rs  system_tools.rs  test_duplicate_detection.rs  test_tool_prefix.rs  test_tool_with_numbers.rs  usage.rs
crates/play-mcp/src/: config.rs  lib.rs  mcp_tools.json  mcp_tools_with_features.json  metadata_loader.rs  registry.rs  tools.rs
crates/play-py-tpl/: Cargo.toml
crates/play-py-tpl/python/: run_template.py  simple_template.py
crates/play-py-tpl/src/: lib.rs  py_runner.rs
crates/play-redis/: Cargo.toml
crates/play-redis/src/: connection.rs  error.rs  lib.rs  pubsub.rs  redis_cluster_service.rs  redis_single_service.rs
crates/play-server/: Cargo.toml  build.rs  config.toml
crates/play-server/src/: config.rs  frp.rs  ikev2.rs  lib.rs  main.rs
crates/play-server/static/: crontab-manager.html  data-manager.html  file-explorer.html  fileupload.html  no_permission.html  plugin-manager.html  redis-manager.html  shortlink-manager.html  tailwind.html
crates/play-shared/: Cargo.toml
crates/play-shared/src/: constants.rs  lib.rs  log_init.rs  redis_api.rs  tpl_engine_api.rs
crates/play-terminal/: Cargo.toml  README.md  README_TMUX.md  test_tmux.sh
crates/play-terminal/examples/: simple.rs
crates/play-terminal/scripts/: setup-persistent-tmux.sh
crates/play-terminal/src/: config.rs  error.rs  lib.rs  routes.rs  server.rs  terminal.rs  utils.rs  websocket.rs
crates/play-terminal/static/: index.html  terminal-scrollback.js  terminal.js
crates/play-ui/: Cargo.toml  Info.plist  README.md  build-dmg.sh  entitlements.plist  package-mac.sh  tauri.conf.json
crates/play-ui/src/: lib.rs  main.rs  tray.rs
crates/play-web-terminal/: Cargo.toml  README_TMUX.md
crates/play-web-terminal/scripts/: setup-persistent-tmux.sh
crates/play-web-terminal/src/: error.rs  lib.rs  local_terminal.rs  server.rs  session_manager.rs  websocket.rs
crates/play-web-terminal/static/: index.html  terminal.js
crates/play_mail_server/: Cargo.toml
crates/server/: Cargo.toml  build.rs  config.toml
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/static/: page-editor.html
crates/server/templates/: frame.html  index.html  test.html
crates/server/tests/: article_controllers_test.rs  chat_controller_test.rs  email_server_test.rs  index_controller_test.rs  user_controller_test.rs
libs/https/: Cargo.toml
libs/https/src/: lib.rs
libs/mail_server/: Cargo.toml
libs/mail_server/src/: smtp.rs
libs/py_tpl/: Cargo.toml
libs/py_tpl/python/: regex_test.py  simple_template.py
libs/py_tpl/src/: lib.rs  py_runner.rs
libs/shared/: Cargo.toml
libs/shared/src/: constants.rs  lib.rs  redis_api.rs
server/: Cargo.toml  build.rs  config.toml  pyoxidizer.bzl
server/benches/: my_benchmark.rs
server/config/: config_dev.toml  config_prod.toml
server/doc/: README.md  db_sqlite.sql  gen_controller.md  gen_model.md  model_template.txt
server/examples/: custom_template.rs  diff.rs  diff_test.rs  markdown.rs  ownership.rs  prism.css  prism.js  pyembed_test.rs  pyo3_test.rs  test.html  test.md  wry_test.rs
server/python/: README.md  run_template.py  simple_template.py
server/src/: config.rs  generated_code.rs  lib.rs  main.rs
server/src/controller/: admin_controller.rs  api_entry_controller.rs  mod.rs  (+29 more)
server/static/: chat.html  crontab-manager.html  file-explorer.html  fileupload.html  no_permission.html  page-editor.html  plugin-manager.html  py-runner.html  shell.html  shortlink-manager.html  sql-runner.html  str-joiner.html  text-compare.html  util.js  web-shell.html
server/templates/: api-manager.html  bottom.html  frame.html  head.html  index.html  str_joiner.html  test.html
server/tests/: article_controllers_test.rs  chat_controller_test.rs  funtion_controller_test.rs  general_data_controller_test.rs  index_controller_test.rs  user_controller_test.rs
shared/: Cargo.toml  build.rs
shared/src/: constants.rs  lib.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
(+359 files in other folders)
