[workspace]
resolver="2"
members = [
    "crates/*",
]
default-members=["crates/server"]

[workspace.dependencies]
# don't use native tls / openssl !!!  use rustls instead.
reqwest = { version = "0.11.22",default-features = false, features = ["json",  "rustls-tls"] }
sqlx = {version = "0.7.2",features = ["runtime-tokio-rustls"]}

## common libs:-
anyhow = { version = "1"}
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
async-channel = "2.3.1"
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
log = "0.4"
data-api= {git = "https://github.com/zhouzhipeng/rust-utils"}
play-abi={path= "crates/play-abi" }
play-shared={path= "crates/play-shared" }
play-macros={path= "crates/play-macros"}
play-ui = { path = "crates/play-ui"}
play-redis = {path = "crates/play-redis"}
play-py-tpl = { path = "crates/play-py-tpl"}
play-https = { path = "crates/play-https"}
play-dylib-loader = { path = "crates/play-dylib-loader"}