[workspace]
resolver="2"
members = [
    "crates/play-https",
    "crates/play-integration/play-integration-xiaozhi",
    "crates/play-lua",
    "crates/play-macros",
    "crates/play-mcp",
    "crates/play-redis",
    "crates/play-server",
    "crates/play-shared",
    "crates/play-ui",
    "crates/play-web-terminal",
    "crates/play-dylib/play-dylib-abi",
    "crates/play-dylib/play-dylib-example",
    "crates/play-dylib/play-dylib-loader",
    "crates/play-utils/play-utils-sql-util",
    "crates/play-utils/play-utils-common-crypt",
    "crates/play-utils/play-utils-blockchain",
    "crates/play-utils/play-utils-data-api",
    "crates/play-utils/play-utils-strings",
]
default-members=["crates/play-server"]

[workspace.dependencies]
# don't use native tls / openssl !!!  use rustls instead.
reqwest = { version = "0.12.9",default-features = false, features = ["json",  "rustls-tls"] }
sqlx = {version = "0.8.2",features = ["runtime-tokio-rustls"]}

## common libs:-
anyhow = { version = "1"}
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
async-channel = "2.3.1"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
play-dylib-abi={path= "crates/play-dylib/play-dylib-abi" }
play-shared={path= "crates/play-shared" }
play-macros={path= "crates/play-macros"}
play-ui = { path = "crates/play-ui"}
play-https = { path = "crates/play-https"}
play-dylib-loader = { path = "crates/play-dylib/play-dylib-loader"}
play-lua = { path = "crates/play-lua"}
play-redis = { path = "crates/play-redis"}
play-mcp = { path = "crates/play-mcp"}
play-server = { path = "crates/play-server"}
play-utils-sql-util = { path = "crates/play-utils/play-utils-sql-util"}
play-utils-common-crypt = { path = "crates/play-utils/play-utils-common-crypt"}
play-utils-blockchain = { path = "crates/play-utils/play-utils-blockchain"}
play-utils-data-api = { path = "crates/play-utils/play-utils-data-api"}
play-utils-strings = { path = "crates/play-utils/play-utils-strings"}
play-integration-xiaozhi = { path = "crates/play-integration/play-integration-xiaozhi"}
play-web-terminal = { path = "crates/play-web-terminal"}

# Additional common dependencies
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3.30"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization and parsing
toml = "0.8"
sqlparser = "0.52.0"
serde_urlencoded = "0.7.1"
serde_qs = "0.15.0"

# Web and networking
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace", "timeout", "cors", "compression-br"] }
axum-server = "0.7.2"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.0", features = ["server"] }
hyper-util = "0.1"
hyper-rustls = "0.27"
rustls-pki-types = "1.0"
#axum-reverse-proxy = { path = "../axum-reverse-proxy", features = ["tls"] }
axum-reverse-proxy = { git="https://github.com/zhouzhipeng/axum-reverse-proxy.git", features = ["tls"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.15"

# Crypto and encoding
md5 = "0.7.0"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
bs58 = "0.5.1"

# Blockchain
bitcoin = "0.32.2"
ethereum-types = "0.14.1"
secp256k1 = "0.29.0"

# File and system utilities
tempfile = "3.15.0"
walkdir = "2.4.0"
zip = { version = "2.2.1", features = ["aes-crypto", "deflate"] }
zip-extract = "0.2.1"
zip-extensions = "0.8.1"
include_dir = "0.7.3"
directories = "5.0.1"
fs_extra = "1.3.0"
infer = "0.16.0"

# UI and rendering
dioxus = "0.6.0"
dioxus-ssr = "0.6.0"

# Utilities
regex = "1.10.2"
lazy_static = "1.4"
either = "1.9.0"
self-replace = "1.3.7"
ansi-to-html = "0.2.1"
html-escape = "0.2.13"
urlencoding = "2.1.3"
mime_guess = "2.0.4"
multer = "3.0.0"
unicode-width = "0.2.0"

# System and process
sysinfo = "0.32"
libloading = "0.8"
dashmap = "6.1.0"
once_cell = "1.19"
linkme = "0.3"

# Tracing and logging
tracing = { git = "https://github.com/zhouzhipeng/tracing.git" }
tracing-subscriber = { git = "https://github.com/zhouzhipeng/tracing.git", version = "0.3", features = ["env-filter"] }
tracing-appender = { git = "https://github.com/zhouzhipeng/tracing.git" }

# CLI
clap = { version = "4.5", features = ["derive"] }
config = "0.14"

# Redis
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# Lua
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send", "serialize", "macros"] }

# Error handling
thiserror = "1.0"

# Proc macros
syn = "2.0.39"
quote = "1.0"

# Build dependencies
cargo_metadata = "0.15.0"

# Testing
axum-test = "17.2.0"
difference = "2.0.0"

# Optional dependencies for specific features
tower-livereload = "0.8.2"
notify = "6.1.1"
rustls-acme = { version = "0.8.1", features = ["axum"] }
