[package]
name = "client"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3"
reqwest = { version = "0.11.22", features = ["json"] }
anyhow = "1.0.75"
shared={path = "../shared"}
web-sys = {version = "0.3.65", features = []}
