[package]
name = "client"
version = "0.1.0"
edition = "2021"

## if wasm-opt not supported on a machine , uncomment below code to disable it.
#[package.metadata.wasm-pack.profile.release]
#wasm-opt=false


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3"
reqwest = { version = "0.11.22", features = ["json"] }
anyhow = "1.0.75"
shared={path = "../shared"}
web-sys = {version = "0.3.65", features = ["Window","Document", "Element", "HtmlElement","HtmlInputElement", "HtmlButtonElement"]}
