[package]
name = "play"
version = "0.1.0"
edition = "2021"


[features]
default=["dev"]
dev=["sqlx","sqlx/sqlite", "bb8-redis", "wry", "image"]
prod=["sqlx","sqlx/mysql", "bb8-redis"]#"bb8-redis-cluster" should be used, (for test now)

[build-dependencies]
walkdir = "2"
fs_extra = "1.3.0"
wasm-pack = "0.12.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
axum-test = "13.1.1"
redis-test = "0.2.3"
criterion = "0.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }


[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
shared={path="../shared"}
rustpython-vm = { version = "0.3.0", features = ["freeze-stdlib"] }
malachite-bigint = { version = "=0.1.0" }
malachite-q = "=0.3.2"
malachite-base = "=0.3.2"
zip-extract = "0.1.2"
sqlx = {version = "0.7.2",features = ["runtime-tokio-native-tls"],optional = true}
axum = { version = "0.6.20", features = ["headers", "http2", "ws"] }
axum-macros = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lazy_static = { version = "1.4.0", features = [] }
crossbeam-channel = "0.5.8"
include_dir = "0.7.3"
mime_guess = "2.0.4"

anyhow = "1.0.75"
toml = "0.8.8"
hyper = "1.0.1"
tower-livereload = {version="0.8.2", optional = true}
tower-http = { version = "0.4.0", features = ["fs", "trace","timeout", "cors"] }
futures = "0.3.29"
#reqwest = { version = "0.11.22", features = ["json"] }
bb8-redis = { version = "0.13.1", optional = true }
bb8-redis-cluster = { version = "0.1.1", optional = true }
futures-util = "0.3.29"
dashmap = "5.5.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-channel = "2.1.1"
regex = "1.10.2"
fancy-regex = "0.12.0"
async-trait = "0.1.74"
wry = { version = "0.34.0", optional = true }
image = { version = "0.24.6", optional = true }