[package]
name = "play"
version = "0.1.0"
edition = "2021"
description = "a play tool using rust"

[package.metadata.packager]
before-packaging-command = "cargo dev_ui"


[features]
default=[]
debug=["tower-livereload","notify", "tpl", "tpl/debug", "pyo3"]
use_embed_python=["tpl", "tpl/use_embed_python"]
#use_mysql=[]

[build-dependencies]
walkdir = "2"
fs_extra = "1.3.0"
anyhow = { workspace=true }
shared={path="../libs/shared", features = ["utils"]}
pyo3 = { version = "0.20.0", optional = true }
regex = "1.10.2"
serde_json = "1.0.68"
chrono = {workspace=true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
axum-test = "13.1.1"
redis-test = "0.2.3"
criterion = "0.5.1"
reqwest = { workspace=true, features= ["blocking"]}

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
# from libs
shared={path="../libs/shared", features = ["proc_macros", "utils"]}
ui = {path = "../libs/ui", optional = true}
redis ={package = "redis", path="../libs/redis", optional = true}
tpl={package = "py_tpl", path = "../libs/py_tpl",optional = true}
mail_server = {path="../libs/mail_server", optional = true}
https = {path = "../libs/https", optional = true}

# third parties
zip-extract = "0.1.2"
sqlx = {workspace=true,features = ["sqlite", "mysql"]}
axum = { version = "0.6.20", features = ["headers", "http2", "ws","macros","tracing"] }
axum-server = "0.5.1"
axum-macros = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = { version = "1.4.0", features = [] }
crossbeam-channel = "0.5.8"
include_dir = "0.7.3"
mime_guess = "2.0.4"
urlencoding = "2.1.3"
anyhow = { workspace=true }
toml = "0.8.8"
hyper = { version = "1.0.1", features = ["server"] }
tower-livereload = {version="0.8.2", optional = true}
notify = { version = "6.1.1", optional = true }
tower-http = { version = "0.4.0", features = ["fs", "trace","timeout", "cors"] }
futures = "0.3.29"
futures-util = "0.3.29"
dashmap = "5.5.3"
reqwest = { workspace=true, features= ["blocking"] }
async-channel = {workspace=true}
regex = { version = "1.10.2", features = [] }
fancy-regex = "0.12.0"
async-trait = {workspace=true}
either = "1.9.0"
sqlparser = { version = "0.40.0"}
self-replace = "1.3.7"
tracing-appender = "0.2.3"
directories = "5.0.1"
chrono = {workspace=true}
ansi-to-html = "0.2.1"
rand = "0.8.5"
scraper = "0.18.1"
tower = "0.4.13"
http-body = "0.4.6"
http = "0.2.11"
moka = { version = "0.12.3", features = ["future"] }
