[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
dev=[]
prod=[]

wasm=["wasm-bindgen", "serde-wasm-bindgen"]
utils=["zip-extract", "sqlparser"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.22", features = ["json"] }
anyhow = "1.0.75"

# for client
wasm-bindgen = { version = "0.2.88", optional = true }
serde-wasm-bindgen = { version = "0.6.1", optional =true }

# for server
zip-extract = { version = "0.1.2", optional = true }

macros={path="../macros", optional = true}
sqlparser = { version = "0.40.0", optional = true }