[package]
name = "play-abi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
anyhow= {workspace = true}
serde_urlencoded = "0.7.1"
serde_json = {workspace = true}
#data-api = {git="https://github.com/zhouzhipeng/rust-utils.git"}
reqwest = {workspace = true}
toml = { version = "0.8.19", optional = true }

[dev-dependencies]
tokio={workspace = true}


[features]
need_config_file = ["toml"]