[package]
name = "play-dylib-example"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
play-abi={path= "../play-abi" }
reqwest = {workspace = true}
anyhow = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
serde = { workspace = true }
data-api = {path="/Users/zhouzhipeng/RustroverProjects/rust-utils/crates/data-api"}