[package]
name = "play-dylib-loader"
version = "0.1.0"
edition = "2021"

[features]
hot-reloading=[]

[dependencies]
libloading = "0.8"
tokio = {workspace = true}
play-abi={workspace = true}
anyhow={workspace = true}
reqwest = {workspace = true}
log = {workspace = true}
serde_json = {workspace = true}
tempfile = "3.12.0"
dashmap = "6.1.0"