[package]
name = "play-https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
rustls-acme = { workspace = true }
log = { workspace = true }
axum-server = { version = "0.5", features = ["tls-rustls"]}
axum = { workspace = true }
tokio-stream = { workspace = true }