[package]
name = "play-integration-xiaozhi"
version = "0.1.0"
edition = "2021"
description = "Xiaozhi MCP integration client for play"

[dependencies]
# Core dependencies
play-mcp = { path = "../play-mcp" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { git = "https://github.com/zhouzhipeng/tracing.git" }

# WebSocket dependencies
tokio-tungstenite = "0.24.0"
futures = "0.3"
futures-util = "0.3"

# Additional utilities
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }