[package]
name = "play-job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-cron-scheduler = "0.10.0"
anyhow = { workspace = true }
chrono = {workspace=true}
log = "0.4.20"
reqwest = { workspace=true }