[package]
name = "play-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "play_mcp"
path = "src/lib.rs"

[[bin]]
name = "mcp-client"
path = "src/bin/mcp-client.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "config", "tracing-subscriber"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
futures = "0.3"
tracing = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
anyhow = "1.0"

# Optional dependencies for CLI
clap = { version = "4.5", features = ["derive"], optional = true }
config = { version = "0.14", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }