[package]
name = "play-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "play_mcp"
path = "src/lib.rs"

[features]
default = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
linkme = { workspace = true }
config = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[build-dependencies]
serde_json = { workspace = true }
