[package]
name = "play-py-tpl"
version = "0.1.0"
edition = "2021"


[features]
debug=[]
use_embed_python=[]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
play-shared={ workspace = true}

pyo3 = { workspace=true }
async-trait = {workspace=true}
async-channel = {workspace=true}
tracing = "0.1"
include_dir = "0.7.3"
lazy_static = "1.4.0"
zip-extract = "0.1.2"
serde_json = "1.0.108"
ureq = "2.2"