[package]
name = "play-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"