[package]
name = "play-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
