[package]
name = "play-server"
version = "0.1.0"
edition = "2021"
description = "a play tool using rust"

[package.metadata.packager]
before-packaging-command = "cargo dev_ui"


[features]
default = []
debug = ["play-dylib-loader","play-lua", "play-integration-xiaozhi"]
use_mysql = ["sqlx/mysql", "sqlparser"]


[build-dependencies]
play-shared = { workspace = true }
chrono = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
axum-test = "17.2.0"
reqwest = { workspace = true, features = ["blocking"] }
difference = "2.0.0"


[dependencies]
# local libs
play-macros={workspace = true}
play-shared = { workspace = true }
play-https = { workspace = true, optional = true }
play-dylib-loader = { workspace = true, optional = true }
play-lua = { workspace = true , optional = true}
play-redis = { workspace = true, optional = true }
play-mcp = { workspace = true }
play-integration-xiaozhi = { path = "../play-integration/play-integration-xiaozhi", optional = true }


# options
tower-livereload = { version = "0.8.2", optional = true }
notify = { version = "6.1.1", optional = true }
sqlparser = { version = "0.52.0", optional = true }


# utils
sql-util = { git = "https://github.com/zhouzhipeng/rust-utils.git" }
common-crypt = { git = "https://github.com/zhouzhipeng/rust-utils.git" }

# third parties
zip-extract = "0.2.1"
sqlx = { workspace = true, features = ["sqlite", "chrono"] }
axum = { workspace = true, features = ["http2", "ws", "macros", "tracing", "multipart"] }
axum-server = "0.7.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { git = "https://github.com/zhouzhipeng/tracing.git" }
tracing-subscriber = { git = "https://github.com/zhouzhipeng/tracing.git", version = "0.3", features = ["env-filter"] }
tracing-appender = { git = "https://github.com/zhouzhipeng/tracing.git" }
include_dir = "0.7.3"
mime_guess = "2.0.4"
urlencoding = "2.1.3"
anyhow = { workspace = true }
toml = "0.8.8"
hyper = { version = "1.0", features = ["server"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "timeout", "cors", "compression-br"] }
futures = "0.3.29"
futures-util = "0.3.29"
reqwest = { workspace = true, features = ["blocking", "stream"] }
async-channel = { workspace = true }
regex = { version = "1.10.2", features = [] }
either = "1.9.0"
self-replace = "1.3.7"
directories = "5.0.1"
chrono = { workspace = true }
ansi-to-html = "0.2.1"
tower = "0.4.13"
http-body = "1.0.0"
http-body-util = "0.1.0"
http = "1.0.0"
hex = "0.4.3"
tokio-util = { version = "0.7", features = ["codec"] }
multer = "3.0.0"
infer = "0.16.0"
walkdir = "2.4.0"
zip = "2.2.1"
futures-core = "0.3.30"
cookie = { version = "0.18.1", features = ["percent-encode"] }
tokio-stream = "0.1.15"
zip-extensions = "0.8.1"
dioxus-ssr = { version = "0.6.0" }
dioxus = { version = "0.6.0" }
fs_extra = "1.3.0"
tempfile = "3.15.0"
serde_qs = "0.15.0"
html-escape = "0.2.13"
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
