[package]
name = "play-server"
version = "0.1.0"
edition = "2021"
description = "a play tool using rust"

[package.metadata.packager]
before-packaging-command = "cargo dev_ui"


[features]
default = []
debug = ["play-dylib-loader","play-lua"]
use_mysql = ["sqlx/mysql", "play-shared/sqlparser"]
server = ["play-dylib-loader","play-lua","play-redis"]
ui = ["play-dylib-loader","play-lua"]


[build-dependencies]
play-shared = { workspace = true }
chrono = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
axum-test = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
difference = { workspace = true }


[dependencies]
play-shared = { workspace = true }
play-https = { workspace = true, optional = true }
play-dylib-loader = { workspace = true, optional = true }
play-lua = { workspace = true , optional = true}
play-redis = { workspace = true, optional = true }
play-mcp = { workspace = true }
play-integration-xiaozhi = { workspace = true, optional = true }
play-web-terminal = { workspace = true }


# utils
play-utils-sql-util = { workspace = true }
play-utils-common-crypt = { workspace = true }

# third parties
zip-extract = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "chrono"] }
axum = { workspace = true, features = ["http2", "ws", "macros", "tracing", "multipart"] }
axum-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
urlencoding = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "stream", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
axum-reverse-proxy = { workspace = true }
async-channel = { workspace = true }
regex = { workspace = true }
either = { workspace = true }
self-replace = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
ansi-to-html = { workspace = true }
tower = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
hex = { workspace = true }
tokio-util = { workspace = true }
multer = { workspace = true }
infer = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
futures-core = { workspace = true }
cookie = { workspace = true }
tokio-stream = { workspace = true }
zip-extensions = { workspace = true }
dioxus-ssr = { workspace = true }
dioxus = { workspace = true }
fs_extra = { workspace = true }
tempfile = { workspace = true }
html-escape = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true }
