[package]
name = "play-shared"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
# for server
zip-extract = { version = "0.1.2", optional = true }
sqlparser = { version = "0.40.0", optional = true }
chrono = { workspace = true }

cargo_metadata = "0.15.0"