[package]
name = "play-shared"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
sqlparser = { workspace = true, optional = true }
chrono = { workspace = true }

cargo_metadata = { workspace = true }
