[package]
name = "play-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws", "headers"] }
tokio = {workspace = true}
futures = "0.3"
serde = { workspace = true}
serde_json = {workspace = true}
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
tokio-util = "0.7"
anyhow = "1.0"
once_cell = "1.17"
include_dir = "0.7"
