[package]
name = "play-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "play-ui"
path = "src/main.rs"

[dependencies]
play-server = { path = "../play-server" }
tray-icon = "0.19"
webbrowser = "1.0"
image = "0.25"
tokio = { workspace = true, features = ["full", "macros"] }
directories = "5.0"
toml = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[package.metadata.bundle]
name = "Play Server"
identifier = "com.zhouzhipeng.play"
icon = ["icons/icon.icns", "icons/icon.ico", "icons/icon.png"]
version = "0.1.0"
resources = ["resources/*"]
copyright = "Copyright (c) 2024 Zhou Zhipeng"
category = "Developer Tools"
short_description = "Play Server with System Tray"
long_description = """
Play Server is a powerful development server with system tray integration.
"""
osx_frameworks = []
osx_url_schemes = ["play-server"]

[package.metadata.packager]
before-packaging-command = "echo 'Preparing package...'"

# macOS specific
[package.metadata.bundle.macos]
minimum_system_version = "10.14"

# Windows specific
[package.metadata.bundle.windows]
wix = true

# Linux specific
[package.metadata.bundle.deb]
depends = "$auto"
section = "utility"