[package]
name = "play-web-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
futures-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
bytes = "1.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]