[package]
name = "mail_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = {workspace=true}
serde = {workspace = true}
serde_json = {workspace = true}
mailin-embedded = {git = "https://github.com/zhouzhipeng/mailin.git"}
mailin = {git = "https://github.com/zhouzhipeng/mailin.git"}
chrono = { workspace = true }
futures = "0.3.28"
mail-parser = "0.8.2"
uuid = { version = "1.3.3", features = ["v4"] }
http-body = "0.4.5"
anyhow = { workspace = true }
log = "0.4.20"
async-channel = {workspace=true}