[package]
name = "play"
version = "0.1.0"
edition = "2021"
description = "a play tool using rust"

[package.metadata.packager]
before-packaging-command = "cargo dev_ui"


[features]
default = []
debug = ["tower-livereload", "notify", "play-py-tpl", "play-py-tpl/debug", "play-cache", "play-job", "play-dylib-loader"]
use_embed_python = ["play-py-tpl", "play-py-tpl/use_embed_python"]
use_mysql=["sqlx/mysql", "sqlparser"]


[build-dependencies]
walkdir = "2"
fs_extra = "1.3.0"
anyhow = { workspace = true }
play-shared = { path = "../play-shared", features = ["utils"] }
regex = "1.10.2"
serde_json = "1.0.68"
chrono = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
axum-test = "13.1.1"
redis-test = "0.2.3"
criterion = "0.5.1"
reqwest = { workspace = true, features = ["blocking"] }

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
# from libs
play-shared = { path = "../play-shared", features = ["play-macros", "utils"] }
play-ui = { path = "../play-ui", optional = true }
play-job = { path = "../play-job", optional = true }
play-redis = {path = "../play-redis", optional = true }
play-py-tpl = { path = "../play-py-tpl", optional = true }
play-mail-server = { path = "../play-mail-server", optional = true }
play-https = { path = "../play-https", optional = true }
play-cache = { path = "../play-cache", optional = true }
play-dylib-loader = { path = "../play-dylib-loader", optional = true }

# utils
rust-utils = {git = "https://github.com/zhouzhipeng/rust-utils.git",features = ["sql-util", "common-crypt"]}


# third parties
zip-extract = "0.1.2"
sqlx = { workspace = true, features = ["sqlite", "chrono"] }
axum = { workspace = true, features = ["headers", "http2", "ws", "macros", "tracing", "multipart"] }
axum-server = "0.5.1"
axum-macros = "0.3.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { git = "https://github.com/zhouzhipeng/tracing.git" }
tracing-subscriber = { git = "https://github.com/zhouzhipeng/tracing.git", version = "0.3", features = ["env-filter"] }
lazy_static = { version = "1.4.0", features = [] }
include_dir = "0.7.3"
mime_guess = "2.0.4"
urlencoding = "2.1.3"
anyhow = { workspace = true }
toml = "0.8.8"
hyper = { version = "1.0.1", features = ["server"] }
tower-livereload = { version = "0.8.2", optional = true }
notify = { version = "6.1.1", optional = true }
tower-http = { version = "0.4.0", features = ["fs", "trace", "timeout", "cors", "compression-gzip"] }
futures = "0.3.29"
futures-util = "0.3.29"
dashmap = "5.5.3"
reqwest = { workspace = true, features = ["blocking", "stream"] }
async-channel = { workspace = true }
regex = { version = "1.10.2", features = [] }
async-trait = { workspace = true }
either = "1.9.0"
sqlparser = { version = "0.40.0",optional = true }
self-replace = "1.3.7"
tracing-appender = { git = "https://github.com/zhouzhipeng/tracing.git" }
directories = "5.0.1"
chrono = { workspace = true }
ansi-to-html = "0.2.1"
rand = "0.8.5"
tower = "0.4.13"
http-body = "0.4.6"
http = "0.2.11"
hex = "0.4.3"
tokio-util = { version = "0.7", features = ["codec"] }
multer = "3.0.0"
infer = "0.7"
walkdir = "2.4.0"
zip = "0.6.6"
futures-core = "0.3.30"
bytes = "1.5.0"
cookie = { version = "0.18.1", features = ["percent-encode"] }
tokio-stream = "0.1.15"
difference = "2.0.0"


